--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "esModuleInterop": true,
-    "target": "ESNext",
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": ["ES2020"],
     "moduleResolution": "node",
-    "sourceMap": false,
-    "outDir": "build",
+    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "rootDir": "src",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "types": ["node"]   // <-- this line tells TS about Node globals like Buffer, process, fs
   },
-  "include": ["src/**/*.json", "src/**/*"],
-  "hooks": ["copy-files"]
+  "include": ["src/**/*"]
 }
