--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eaglerproxy",
   "version": "1.0.0",
-  "description": "A flexible, easy expandable EaglercraftX 1.8.9 proxy written in TypeScript.",
+  "description": "A flexible, easily expandable EaglercraftX 1.8.9 proxy written in TypeScript.",
   "main": "build/index.js",
   "type": "module",
   "scripts": {
