--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2021",
+    "lib": ["ES2021"],
     "module": "commonjs",
-    "lib": ["ES2020"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "strict": false,
+    "noImplicitAny": false,
+    "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "types": ["node"]
   },
   "include": ["src/**/*"]
